# tensorscope

./: .gitignore  README.md  dev.sh  pyproject.toml
tensorscope/: __init__.py
tensorscope/core/: __init__.py  graph.py  operator.py  registry.py  scenario.py  tensor.py
tensorscope/operators/: __init__.py  basic.py  decompositions.py  solvers.py
tensorscope/scenarios/: CREATING_SCENARIOS.md  __init__.py  least_squares_2d.py
tensorscope/server/: __init__.py  main.py  routes.py  schemas.py  state.py  websocket.py
tests/: __init__.py
tests/test_core/: __init__.py  test_core_types.py
tests/test_operators/: __init__.py  test_basic.py
tests/test_scenarios/: __init__.py  test_least_squares.py
web/: package-lock.json  package.json
web/src/: App.css  App.tsx  index.css
web/src/api/: client.ts  websocket.ts
web/src/components/Controls/: ParameterPanel.tsx  ParameterSelect.tsx  ParameterSlider.tsx  index.ts
web/src/components/Graph/: OperatorGraph.tsx  OperatorNode.tsx  index.ts
web/src/components/Inspector/: TensorInspector.tsx  index.ts
web/src/components/Loading/: Loading.tsx  index.ts
web/src/components/Toast/: Toast.tsx
web/src/components/Visualizers/: Ellipse2D.tsx  Heatmap.tsx  SingularValues.tsx  VectorStem.tsx  index.ts
web/src/store/: index.ts
web/src/types/: index.ts
